# lighting-json-parser-cpp

./: CMakeLists.txt  LICENSE  README.md  script.sh
scripts/: main.mjs
src/: main.cpp
